<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/icon_background"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_foreground" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile_dev_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/profile_dev"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:srcCompat="@drawable/profile_dev" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/developer_link"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:autoLink="web"
                        android:gravity="center"
                        android:text="@string/developer"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repository_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/repository"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textAllCaps="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>